// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A popular game after selecting ❤️: after selecting ❤️ 1`] = `
Array [
  Array [
    "❤️",
    "💛",
    "❤️",
    "💜",
    "🖤",
    "💙",
  ],
  Array [
    "🖤",
    "💜",
    "❤️",
    "💜",
    "🖤",
    "🖤",
  ],
  Array [
    "💛",
    "❤️",
    "💜",
    "🖤",
    "💙",
    "🖤",
  ],
  Array [
    "💛",
    "💙",
    "💙",
    "💜",
    "💙",
    "🖤",
  ],
  Array [
    "❤️",
    "💛",
    "❤️",
    "💛",
    "💙",
    "💛",
  ],
  Array [
    "❤️",
    "🖤",
    "💙",
    "💛",
    "🖤",
    "💜",
  ],
]
`;

exports[`A popular game after selecting 💚: after selecting 💚 1`] = `
Array [
  Array [
    "💚",
    "💛",
    "❤️",
    "💜",
    "🖤",
    "💙",
  ],
  Array [
    "🖤",
    "💜",
    "❤️",
    "💜",
    "🖤",
    "🖤",
  ],
  Array [
    "💛",
    "❤️",
    "💜",
    "🖤",
    "💙",
    "🖤",
  ],
  Array [
    "💛",
    "💙",
    "💙",
    "💜",
    "💙",
    "🖤",
  ],
  Array [
    "❤️",
    "💛",
    "❤️",
    "💛",
    "💙",
    "💛",
  ],
  Array [
    "❤️",
    "🖤",
    "💙",
    "💛",
    "🖤",
    "💜",
  ],
]
`;

exports[`A popular game after selecting 💛: after selecting 💛 1`] = `
Array [
  Array [
    "💛",
    "💛",
    "❤️",
    "💜",
    "🖤",
    "💙",
  ],
  Array [
    "🖤",
    "💜",
    "❤️",
    "💜",
    "🖤",
    "🖤",
  ],
  Array [
    "💛",
    "❤️",
    "💜",
    "🖤",
    "💙",
    "🖤",
  ],
  Array [
    "💛",
    "💙",
    "💙",
    "💜",
    "💙",
    "🖤",
  ],
  Array [
    "❤️",
    "💛",
    "❤️",
    "💛",
    "💙",
    "💛",
  ],
  Array [
    "❤️",
    "🖤",
    "💙",
    "💛",
    "🖤",
    "💜",
  ],
]
`;

exports[`A popular game after selecting 💜: after selecting 💜 1`] = `
Array [
  Array [
    "💜",
    "💛",
    "❤️",
    "💜",
    "🖤",
    "💙",
  ],
  Array [
    "🖤",
    "💜",
    "❤️",
    "💜",
    "🖤",
    "🖤",
  ],
  Array [
    "💛",
    "❤️",
    "💜",
    "🖤",
    "💙",
    "🖤",
  ],
  Array [
    "💛",
    "💙",
    "💙",
    "💜",
    "💙",
    "🖤",
  ],
  Array [
    "❤️",
    "💛",
    "❤️",
    "💛",
    "💙",
    "💛",
  ],
  Array [
    "❤️",
    "🖤",
    "💙",
    "💛",
    "🖤",
    "💜",
  ],
]
`;

exports[`A popular game creates initial board: Initial 1`] = `
Array [
  Array [
    "🖤",
    "💛",
    "❤️",
    "💜",
    "🖤",
    "💙",
  ],
  Array [
    "🖤",
    "💜",
    "❤️",
    "💜",
    "🖤",
    "🖤",
  ],
  Array [
    "💛",
    "❤️",
    "💜",
    "🖤",
    "💙",
    "🖤",
  ],
  Array [
    "💛",
    "💙",
    "💙",
    "💜",
    "💙",
    "🖤",
  ],
  Array [
    "❤️",
    "💛",
    "❤️",
    "💛",
    "💙",
    "💛",
  ],
  Array [
    "❤️",
    "🖤",
    "💙",
    "💛",
    "🖤",
    "💜",
  ],
]
`;
